--- a/2020/day17/Cargo.toml
+++ b/2020/day17/Cargo.toml
@@ -8,8 +8,7 @@ description.workspace = true
 publish.workspace = true
 
 [dependencies]
-nom.workspace = true
-# aoc_helper.workspace = true
+fxhash.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
