--- a/2020/day20/Cargo.toml
+++ b/2020/day20/Cargo.toml
@@ -9,7 +9,4 @@ publish.workspace = true
 
 [dependencies]
 nom.workspace = true
-# aoc_helper.workspace = true
-
-[dev-dependencies]
-rstest.workspace = true
+grid.workspace = true
