--- a/2020/day22/Cargo.toml
+++ b/2020/day22/Cargo.toml
@@ -9,7 +9,5 @@ publish.workspace = true
 
 [dependencies]
 nom.workspace = true
-# aoc_helper.workspace = true
+fxhash.workspace = true
 
-[dev-dependencies]
-rstest.workspace = true
