--- a/2021/day06/Cargo.toml
+++ b/2021/day06/Cargo.toml
@@ -8,8 +8,4 @@ description.workspace = true
 publish.workspace = true
 
 [dependencies]
-nom.workspace = true
-# aoc_helper.workspace = true
-
-[dev-dependencies]
-rstest.workspace = true
+fxhash.workspace = true
