--- a/2021/day15/Cargo.toml
+++ b/2021/day15/Cargo.toml
@@ -8,8 +8,5 @@ description.workspace = true
 publish.workspace = true
 
 [dependencies]
-nom.workspace = true
-# aoc_helper.workspace = true
-
-[dev-dependencies]
-rstest.workspace = true
+aoc_helper.workspace = true
+grid.workspace = true
