--- a/2021/day16/Cargo.toml
+++ b/2021/day16/Cargo.toml
@@ -8,6 +8,7 @@ description.workspace = true
 publish.workspace = true
 
 [dependencies]
+nom.workspace = true
 
 [dev-dependencies]
 rstest.workspace = true
